--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ version: 2.2.1
 repository: https://github.com/frencojobs/interact
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  dart_console: 4.1.0
+  dart_console: ^4.1.0
   meta: ^1.8.0
   tint: ^2.0.0
 
